Projects architecture. Added dependency injection, middlewares, app config.
