# api/controllers/user-controller.go
@@ -3,9 +3,8 @@ package controllers
 import (
 	"net/http"
 
+	"github.com/danyducky/social/api/dtos"
 	"github.com/gin-gonic/gin"
-	"site.com/dtos"
-	helper "site.com/infrastructure"
 )
 
 type UserController interface {
@@ -25,12 +24,12 @@ func NewUserController() UserController {
 // @Accept json
 // @Produce json
 // @Success 200 {object} dtos.UserDto
-// @Router /user/me [get]
+// @Router /user [get]
 func (c *userController) GetMe(ctx *gin.Context) {
 	data := dtos.UserDto{
 		Firstname: "Danil",
 		Lastname:  "Morikov",
 	}
-	response := helper.OkResponse("This endpoint will give information about the user.", data)
-	ctx.JSON(http.StatusOK, response)
+
+	ctx.JSON(http.StatusOK, data)
 }
